With custom background and fonts color

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Wikipedia</title>
 </head>
 <body>
+    <body class="background-style"></body>
 
     <header>
         <a href="https://en.wikipedia.org/wiki/Mobile_phone"><strong><h1>Mobile Phone</h1></strong></a>
